create custom styles

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: GIIN user manual
 description: Guides and references for creating web-based games using GIIN.
 ---
 
-The Generic Incremental Interactive eNgine (GIIN) is a game engine for menu-driven games on the web. It is currently in early development. 
+**Generic Incremental Interactive eNgine (GIIN)** is a game engine for menu-driven games on the web. It is currently in early development. 
 
 ## Feature demo
 
