--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -7,6 +7,13 @@ description: Guides and references for creating web-based games using GIIN.
 
 ## Feature demo
 
+### Visual novel engine features
+
+<video width="480" height="360" controls><source src="/docs/src/assets/giin-log3.mp4" type="video/mp4" /></video>
+
+- Branching dialog
+- Stat creation and management
+
 ## Goals
 
 ## Roadmap
