begin blog pipeline

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -3,12 +3,11 @@ title: GIIN user manual
 description: Guides and references for creating web-based games using GIIN.
 ---
 import { Image } from 'astro:assets';
-//import myImportedImage from '../../assets/houston.webp';
-import demoLog1 from '../../assets/giin-log3.mp4';
+import demoLog1 from '/src/assets/giin-log3.mp4';
 
 **Generic Incremental Interactive eNgine (GIIN)** is a game engine for menu-driven games on the web. It is currently in early development.
 
-GIIN makes use of MS Excel to create data or content in games. It uses a simple scripting language to create **game objects** and **interactions**.
+GIIN makes use of MS Excel to create data or content in games. This enables you to easily create stats for your player characters, creatures, and more in a tabular and intuitive environment.
 
 Watch a demo to see it in action.
 
