minor edits to index

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -19,6 +19,8 @@ _**Read the devlog**: Milestone 01_
 
 <video width="480" height="360" controls><source src={demoLog1} type="video/mp4" /></video>
 
+This demo highlights the following features:
+
 - Basic export pipeline to enforce separation of data and logic.
 - Visual novel features:
   - Branching dialog.
@@ -26,7 +28,7 @@ _**Read the devlog**: Milestone 01_
 
 ## Goal
 
-To make incremental, visual novel, and adventure game mechanics easily scriptable and prototypable.
+To provide fast, intuitive, and comprehensive tooling for incremental, visual novel, and adventure game mechanics.
 
 ## Prerequisites
 
