test imports on main docs

--- a/docs/src/content/docs/blog/devblog1.mdx
+++ b/docs/src/content/docs/blog/devblog1.mdx
@@ -5,7 +5,7 @@ featured: true
 ---
 import demoLog1 from '/src/assets/giin-log3.mp4';
 
-![DESCRIPTION-tk](/src/assets/giin-logo-temp.png)
+![GIIN logo](/src/assets/giin-logo-temp.png)
 
 Generic Incremental Interactive eNgine (GIIN) is a small engine for building menu-based games. It currently supports basic visual novel mechanics similar to [Twine](www.twinery.org), and is in development towards eventually supporting incremental and adventure game mechanics. It is built on ReactJS and is in early development.
 
