--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -5,8 +5,7 @@ description: Guides and references for creating web-based games using GIIN.
 import { Image } from 'astro:assets';
 import demoLog1 from '/src/assets/giin-log3.mp4';
 
-
-![GIIN logo](/src/assets/giin-logo-temp.png)
+![GIIN logo](/public/giin-logo-temp.png)
 
 **Generic Incremental Interactive eNgine (GIIN)** is a game engine for menu-driven games on the web. It is currently in early development.
 
