check if import works

--- a/docs/src/content/docs/blog/devblog1.mdx
+++ b/docs/src/content/docs/blog/devblog1.mdx
@@ -4,6 +4,11 @@ date: 2025-08-29
 featured: true
 ---
 import demoLog1 from '/src/assets/giin-log3.mp4';
+import giinLogo from '/src/assets/giin-logo-temp.png';
+
+<img src={giinLogo} />
+
+<picture><source srcset={giinLogo} /></picture>
 
 ![GIIN logo](/giin-logo-temp.png)
 
