--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -4,8 +4,9 @@ description: Guides and references for creating web-based games using GIIN.
 ---
 import { Image } from 'astro:assets';
 import demoLog1 from '/src/assets/giin-log3.mp4';
+import giinLogo from '/src/assets/giin-logo-temp.png';
 
-![GIIN logo](/public/giin-logo-temp.png)
+<Image src={giinLogo} alt='GIIN logo' />
 
 **Generic Incremental Interactive eNgine (GIIN)** is a game engine for menu-driven games on the web. It is currently in early development.
 
@@ -30,7 +31,7 @@ This demo highlights the following features:
 
 ## Goal
 
-To provide fast, intuitive, and comprehensive tooling for incremental, visual novel, and adventure game mechanics.
+To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 
 ## Prerequisites
 
@@ -48,8 +49,9 @@ To provide fast, intuitive, and comprehensive tooling for incremental, visual no
 ## Inspiration
 
 - The [SCUMM game engine](https://www.gamedeveloper.com/design/the-scumm-diary-stories-behind-one-of-the-greatest-game-engines-ever-made). See the **Learning SCUMM** and **The SCUMM advantage** sections of the linked article.
-- The Sleipnir game engine, which was used for a variety of [Adventure games](https://hogs.fandom.com/wiki/Boomzap_Entertainment). It supported Hidden Object and various Puzzle mechanics.
+- The Sleipnir game engine, which was used for a variety of [Adventure games](https://hogs.fandom.com/wiki/Boomzap_Entertainment). It supported hidden object ane various puzzle mechanics.
 
 ## Credits
 
+- GIIN was created and is actively developed by @urbanpidgeon.
 - GIIN logo asset designed by Rochak Shukla on freepik.com.
