rename and change slug

--- a/docs/src/content/docs/blog/devblog001.mdx
+++ b/docs/src/content/docs/blog/devblog001.mdx
@@ -1,18 +1,16 @@
 ---
 title: GIIN begins
 date: 2025-08-29
+slug: 2025-08-29-devblog
 featured: true
 ---
 import demoLog1 from '/src/assets/giin-log3.mp4';
 import giinLogo from '/src/assets/giin-logo-temp.png';
+import { Image } from 'astro:assets';
 
-<img src={giinLogo} />
+<Image src={giinLogo} alt='GIIN logo' />
 
-<picture><source srcset={giinLogo} /></picture>
-
-![GIIN logo](/giin-logo-temp.png)
-
-Generic Incremental Interactive eNgine (GIIN) is a small engine for building menu-based games. It currently supports basic visual novel mechanics similar to [Twine](www.twinery.org), and is in development towards eventually supporting incremental and adventure game mechanics. It is built on ReactJS and is in early development.
+Generic Incremental Interactive eNgine (GIIN) is a small game engine for building menu-driven games. It currently supports basic visual novel mechanics similar to [Twine](www.twinery.org), and is in development towards supporting incremental and adventure game mechanics. It is built on ReactJS and is in early development. Its primary data-editing interface is MS Excel.
 
 ## Beginnings
 
