added minor nollm section

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -46,6 +46,8 @@ To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 - Data export through MS Excel.
 - Image and 2D particle support.
 
+## About the engine
+
 ## Inspiration
 
 - The [SCUMM game engine](https://www.gamedeveloper.com/design/the-scumm-diary-stories-behind-one-of-the-greatest-game-engines-ever-made). See the **Learning SCUMM** and **The SCUMM advantage** sections of the linked article.
@@ -55,3 +57,7 @@ To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 
 - GIIN was created and is actively developed by @urbanpidgeon.
 - GIIN logo asset designed by Rochak Shukla on freepik.com.
+
+### No-GenAI, no-LLM philosophy
+
+**No GenAI or LLM tools** are used to create any content or code for this project. A human being wrote what you are reading now and a human being wrote, writes, and will write all the content in this manual.
