--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -8,9 +8,9 @@ import giinLogo from '/src/assets/giin-logo-temp.png';
 
 <Image src={giinLogo} alt='GIIN logo' />
 
-**Generic Incremental Interactive eNgine (GIIN)** is a game engine for menu-driven games on the web. It is currently in early development.
+**Generic Incremental Interactive eNgine (GIIN)** is a game engine for menu-driven games on the web, currently in early development.
 
-GIIN makes use of MS Excel to create data or content in games. This enables you to easily create stats for your player characters, creatures, and more in a tabular and intuitive environment.
+GIIN makes use of MS Excel to create data or content in games. This enables you to easily create stats or any other attribute for your player characters, creatures, and more in a tabular and intuitive environment.
 
 Watch a demo to see it in action.
 
@@ -18,7 +18,7 @@ Watch a demo to see it in action.
 
 #### September 5, 2025
 
-_**Read the devlog**: Milestone 01_
+_**Read the devlog**: [Milestone 01](/giin/2025-08-29-devblog/)_
 
 <video width="480" height="360" controls><source src={demoLog1} type="video/mp4" /></video>
 
@@ -48,16 +48,16 @@ To provide fast, intuitive, and comprehensive tooling for menu-driven games.
 
 ## About the engine
 
-## Inspiration
+### Inspiration
 
 - The [SCUMM game engine](https://www.gamedeveloper.com/design/the-scumm-diary-stories-behind-one-of-the-greatest-game-engines-ever-made). See the **Learning SCUMM** and **The SCUMM advantage** sections of the linked article.
 - The Sleipnir game engine, which was used for a variety of [Adventure games](https://hogs.fandom.com/wiki/Boomzap_Entertainment). It supported hidden object ane various puzzle mechanics.
 
-## Credits
+### Credits
 
-- GIIN was created and is actively developed by @urbanpidgeon.
+- GIIN was created and is actively developed by [@urbanpidgeon](https://github.com/urbanpidgeon).
 - GIIN logo asset designed by Rochak Shukla on freepik.com.
 
 ### No-GenAI, no-LLM philosophy
 
-**No GenAI or LLM tools** are used to create any content or code for this project. A human being wrote what you are reading now and a human being wrote, writes, and will write all the content in this manual.
+**No GenAI or LLM tools** are used to create any content or code for this project. Nor are GenAI or LLM tools in **any** part of the development pipeline, **not even for placeholders**.
